# hr_admin

./: Profile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py
core/migrations/: 0001_initial.py
kgk_test/: asgi.py  settings.py  urls.py  wsgi.py
payment/: admin.py  models.py
payment/migrations/: 0001_initial.py
